# Radegast

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
RadegastLib/: CMakeLists.txt
RadegastLib/include/: rgWindow.h
RadegastLib/include/common/: rgHelper.h  rgLogger.h
RadegastLib/include/platform/: rgWindow.h
RadegastLib/include/rendering/core/: rgDevice.h  rgInstance.h  rgPhysicalDevice.h
RadegastLib/src/: rgWindow.cpp
RadegastLib/src/common/: rgHelper.cpp
RadegastLib/src/platform/: rgWindow.cpp
RadegastLib/src/rendering/core/: rgDevice.cpp  rgInstance.cpp  rgPhysicalDevice.cpp
samples/: CMakeLists.txt
samples/sample_dependency_test/: CMakeLists.txt  main.cpp
samples/sample_device_instance_test/: CMakeLists.txt  main.cpp
samples/sample_dummy_window_test/: CMakeLists.txt  main.cpp
